k8s/spotit-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spotit-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spotit-app
  template:
    metadata:
      labels:
        app: spotit-app
    spec:
      containers:
        - name: spotit-app
          image: ghcr.io/wgola/spotit-app:main
          resources:
            limits:
              memory: "512Mi"
              cpu: "2000m"
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: spotit-app
spec:
  selector:
    app: spotit-app
  ports:
    - port: 8080
      targetPort: 8080
