k8s/spotit-postgres.yml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: spotit-postgres
spec:
  selector:
    matchLabels:
      app: spotit-postgres
  template:
    metadata:
      labels:
        app: spotit-postgres
    spec:
      containers:
        - name: spotit-postgres
          image: postgres:15.4-alpine
          resources:
            limits:
              memory: '1Gi'
              cpu: '1000m'
          volumeMounts:
            - name: spotit-postgres-storage
              mountPath: /var/lib/postgres/data
          ports:
            - containerPort: 5432
      volumes:
        - name: spotit-postgres-storage
          persistentVolumeClaim:
            claimName: spotit-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: spotit-postgres
spec:
  selector:
    app: spotit-postgres
  ports:
    - port: 5432
      targetPort: 5432
