k8s/spotit-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spotit-redis
spec:
  selector:
    matchLabels:
      app: spotit-redis
  template:
    metadata:
      labels:
        app: spotit-redis
    spec:
      containers:
        - name: spotit-redis
          image: redis:7.0.12-alpine
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: spotit-redis
spec:
  selector:
    app: spotit-redis
  ports:
    - port: 6379
      targetPort: 6379
