k8s/spotit-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spotit-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spotit-app
                port:
                  number: 8080
